# discogs-cli

./: .git-naming.toml  .gitignore  AGENTS.md  GIT.md  README.md  pyproject.toml
.codex/skills/git-branch-namer/: SKILL.md
.codex/skills/git-commit-drafter/: SKILL.md
.codex/skills/pytest-unit-test/: SKILL.md
docs/: architecture.md
scripts/: dev_run.sh
src/discogs_cli/: __init__.py  __main__.py  app.py  config.py  logging.py
src/discogs_cli/assets/: app.tcss  discogs_ascii.txt
src/discogs_cli/models/: __init__.py  auth.py
src/discogs_cli/screens/: main.py  oauth.py
src/discogs_cli/services/: __init__.py  discogs_auth.py  discogs_client.py  oauth.py  wishlist_rows.py
src/discogs_cli/widgets/: __init__.py  ascii_header.py  auth_status.py  releases_table.py  status_bar.py
tests/integration/: test_cli.py
tests/unit/: conftest.py  test_app.py
tests/unit/services/: test_wishlist_rows.py
