[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "discogs-cli"
version = "0.1.0"
description = "Discogs TUI client"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual>=0.52.0",
  "authlib>=1.3.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
discogs = "discogs_cli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.hatch.build.targets.wheel]
packages = ["src/discogs_cli"]
include = ["src/discogs_cli/assets/*.tcss", "src/discogs_cli/assets/*.txt"]

[tool.hatch.build.targets.sdist]
include = ["src/discogs_cli", "README.md", "pyproject.toml", "AGENTS.md", "docs"]
